complete and working after Lesson 18, but have not done the exercises

--- a/templates/index.eex
+++ b/templates/index.eex
@@ -1,7 +1,8 @@
 <h1>All The Bears!</h1>
 
+<!-- see use of Comprehension here (and need to close the do with 'end' at the bottom -->
 <ul>
-    <%= for bear <- bears do %> # see use of Comprehension here (and need to close the do with <% end %> at the bottom
+    <%= for bear <- bears do %>
       <li><%= bear.name  %> - <%= bear.type %></li>
     <% end %>
 </ul>
